--- a/src/buckstore.auth.service.domain/buckstore.auth.service.domain.csproj
+++ b/src/buckstore.auth.service.domain/buckstore.auth.service.domain.csproj
@@ -6,9 +6,6 @@
 
     <ItemGroup>
         <PackageReference Include="MediatR" Version="8.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Aggregates" />
+        <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.8" />
     </ItemGroup>
 </Project>
