--- a/src/buckstore.auth.service.infrastructure.Data/buckstore.auth.service.infrastructure.Data.csproj
+++ b/src/buckstore.auth.service.infrastructure.Data/buckstore.auth.service.infrastructure.Data.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\buckstore.auth.service.application\buckstore.auth.service.application.csproj" />
+      <ProjectReference Include="..\buckstore.auth.service.domain\buckstore.auth.service.domain.csproj" />
     </ItemGroup>
 
     
