refactor: change user entity to have a nullable cred Card field
Change CredCard field on User
Create initial migration and update DB

--- a/src/buckstore.auth.service.infrastructure.Data/buckstore.auth.service.infrastructure.Data.csproj
+++ b/src/buckstore.auth.service.infrastructure.Data/buckstore.auth.service.infrastructure.Data.csproj
@@ -16,5 +16,9 @@
       <ProjectReference Include="..\buckstore.auth.service.domain\buckstore.auth.service.domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
     
 </Project>
