refactor: fix Mongo url

--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -10,7 +10,7 @@
   "AppConfiguration": {
     "MongoDbConfiguration": {
       "CollectionName": "auth",
-      "ConnectionString": "connectionString",
+      "ConnectionString": "mongodb+srv://lincolntx:dedede@cluster0.juhuh.mongodb.net/buckstore?retryWrites=true&w=majority",
       "DatabaseName": "buckstore"
     }
   }
