feat: add a environment project
Create a env project to get all appsettings configs

--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "AppConfiguration": {
+  "AppConfigurations": {
     "MongoDbConfiguration": {
       "CollectionName": "auth",
-      "ConnectionString": "mongodb+srv://lincolntx:dedede@cluster0.juhuh.mongodb.net/buckstore?retryWrites=true&w=majority",
+      "ConnectionString": "mongodb+srv://lincolntx:lincolnPolivel22@cluster0.juhuh.mongodb.net/buckstore?retryWrites=true&w=majority",
       "DatabaseName": "buckstore"
     }
   }
