refactor: change controller name from Register to Identity
Create identity controller for every auth req
Add more settings on environment and NativeInjectorBootstrapper.cs

--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -12,6 +12,10 @@
       "CollectionName": "auth",
       "ConnectionString": "mongodb+srv://lincolntx:lincolnPolivel22@cluster0.juhuh.mongodb.net/buckstore?retryWrites=true&w=majority",
       "DatabaseName": "buckstore"
+    },
+    "JwtSettings": {
+      "Secret": "0745157186",
+      "TokenLifetime": "1110"
     }
   }
 }
