refactor: change Dependency Injection for services and connectionString
Change Dependency injection for the IAuthQueryService.cs
Create a model for the read Db

--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -10,12 +10,12 @@
   "AppConfigurations": {
     "MongoDbConfiguration": {
       "CollectionName": "auth",
-      "ConnectionString": "mongodb+srv://lincolntx:lincolnPolivel22@cluster0.juhuh.mongodb.net/buckstore?retryWrites=true&w=majority",
+      "ConnectionString": "mongodb+srv://lincolndev:lincolnPolivel12@cluster0.k1plu.mongodb.net/buckstore?retryWrites=true&w=majority",
       "DatabaseName": "buckstore"
-    },
-    "JwtSettings": {
-      "Secret": "0745157186",
-      "TokenLifetime": "1110"
     }
+    },
+  "JwtSettings": {
+    "Secret": "0745157186",
+    "TokenLifetime": "00000"
   }
 }
