--- a/src/buckstore.auth.service.application/buckstore.auth.service.application.csproj
+++ b/src/buckstore.auth.service.application/buckstore.auth.service.application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
     
     <ItemGroup>
+      <ProjectReference Include="..\..\buckstore.auth.service.infrastructure.CrossCutting.identity\buckstore.auth.service.infrastructure.CrossCutting.identity.csproj" />
       <ProjectReference Include="..\buckstore.auth.service.domain\buckstore.auth.service.domain.csproj" />
       <ProjectReference Include="..\buckstore.auth.service.environment\buckstore.auth.service.environment.csproj" />
     </ItemGroup>
