--- a/src/buckstore.auth.service.infrastructure.CrossCutting.identity/buckstore.auth.service.infrastructure.CrossCutting.identity.csproj
+++ b/src/buckstore.auth.service.infrastructure.CrossCutting.identity/buckstore.auth.service.infrastructure.CrossCutting.identity.csproj
@@ -5,12 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0"/>
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\buckstore.auth.service.environment\buckstore.auth.service.environment.csproj" />
+      <ProjectReference Include="..\buckstore.auth.service.environment\buckstore.auth.service.environment.csproj" />
     </ItemGroup>
 
 </Project>
