--- a/src/buckstore.auth.service.api.v1/Properties/launchSettings.json
+++ b/src/buckstore.auth.service.api.v1/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "buckstore.auth.service.api.v1": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
