--- a/src/buckstore.auth.service.infrastructure.CrossCutting.identity/buckstore.auth.service.infrastructure.CrossCutting.identity.csproj
+++ b/src/buckstore.auth.service.infrastructure.CrossCutting.identity/buckstore.auth.service.infrastructure.CrossCutting.identity.csproj
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\buckstore.auth.service.domain\buckstore.auth.service.domain.csproj" />
       <ProjectReference Include="..\buckstore.auth.service.environment\buckstore.auth.service.environment.csproj" />
     </ItemGroup>
 
