refactor: implementing facebook token validate and user info request
Refactor FacebookIndetityService to implemting the two methods
Using HttpClientFactory to injection a HttpClient safe service on NativeInjector

--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -19,8 +19,8 @@
     "TokenLifetime": "01:00:00"
   },
   "FacebookSettings": {
-    "ValidateTokenUrl": "https://graph.facebook.com/debug_token",
-    "UserInfoUrl": "https://graph.facebook.com/me?fields=first_name,last_name,email,hometown&access_token=",
+    "ValidateTokenUrl": "https://graph.facebook.com/debug_token?input_token={0}&access_token={1}|{2}",
+    "UserInfoUrl": "https://graph.facebook.com/me?fields=first_name,last_name,email,hometown&access_token={0}",
     "AppId": "214622376801916",
     "AppSecret": "5f54f28249daed855240943d9601f88b"
   }
