--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)          
+      run: |
+        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        docker login -u ${DOCKERHUBUSER} -p ${DOCKERHUBPASS}
+        git tag latest
+        git push origin --tags
+        docker push buckstore.auth:latest
       env: 
         DOCKERHUBUSER: ${{secrets.DOCKERHUBUSER}}
         DOCKERHUBPASS: ${{secrets.DOCKERHUBPASS}}
