--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag buckstore.auth:latest
+        docker build . --file Dockerfile --tag buckstore.auth:$(date +%s)
         git tag latest
         git push origin --tags
-        docker push buckstore.auth:latest
+        docker push buckstore.auth:$(date +%s)
       env: 
         DOCKERHUBUSER: ${{secrets.DOCKERHUBUSER}}
         DOCKERHUBPASS: ${{secrets.DOCKERHUBPASS}}
