--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file Dockerfile --tag buckstore.auth:$(date +%s)
-        git tag latest
+        git tag $(date +%s)
         git push origin --tags
         docker push buckstore.auth:$(date +%s)
       env: 
