--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: |
-        docker build . --file Dockerfile --tag buckstore.auth
-        git tag $(date +%s)
-        git push origin --tags
-        docker push buckstore.auth
-      env: 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with: 
         DOCKERHUBUSER: ${{secrets.DOCKERHUBUSER}}
         DOCKERHUBPASS: ${{secrets.DOCKERHUBPASS}}
+    
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+    
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ../Dockerfile
+        push: true
+        tags: ${{secrets.DOCKERHUBUSER}}/buckstore.auth:latest
+      
