--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with: 
-        DOCKERHUBUSER: ${{secrets.DOCKERHUBUSER}}
-        DOCKERHUBPASS: ${{secrets.DOCKERHUBPASS}}
+        username: ${{secrets.DOCKERHUBUSER}}
+        password: ${{secrets.DOCKERHUBPASS}}
     
     - name: Set up Docker Buildx
       id: buildx
