--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,23 +13,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: lincolntx
-        password: Polive22
-    
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-    
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ./
-        file: ../Dockerfile
-        push: true
-        tags: ${{secrets.DOCKERHUBUSER}}/buckstore.auth:latest
+
+      -
+
+        name: Login to DockerHub
+
+        uses: docker/login-action@v1 
+
+        with:
+
+          username: ${{ secrets.DOCKERHUBUSER }}
+
+          password: ${{ secrets.DOCKERHUBPASS }}
+
+      -
+
+        name: Build and push
+
+        id: docker_build
+
+        uses: docker/build-push-action@v2
+
+        with:
+
+          context: ./
+
+          file: ../Dockerfile
+
+          push: true
+
+          tags: bengotch/simplewhale:latest
+
+      -
+
+        name: Image digest
+
+        run: echo ${{ steps.docker_build.outputs.digest }}
       
