--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,52 +1,39 @@
-name: Docker Image CI
+name: CI to Docker Hub
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+  
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
+    
+  steps:
 
-    steps:
+    - name: Check Out Repo 
+      uses: actions/checkout@v2
 
-      -
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-        name: Login to DockerHub
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
 
-        uses: docker/login-action@v1 
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ../Dockerfile
+        push: true
+        tags: lincolntx/bucstore.auth:latest
 
-        with:
-        
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      -
-
-        name: Build and push
-
-        id: docker_build
-
-        uses: docker/build-push-action@v2
-
-        with:
-
-          context: ./
-
-          file: ../Dockerfile
-
-          push: true
-
-          tags: bengotch/simplewhale:latest
-
-      -
-
-        name: Image digest
-
+      - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-      
