--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,4 +36,5 @@ jobs:
         tags: lincolntx/bucstore.auth:latest
 
     - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
         run: echo ${{ steps.docker_build.outputs.digest }}
