--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,21 +12,24 @@ jobs:
     runs-on: ubuntu-latest
   
   steps:
-
-    - name: Check Out Repo 
+    - 
+      name: Check Out Repo 
       uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
+    - 
+      name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    - name: Set up Docker Buildx
+    - 
+      name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Build and push
+    - 
+      name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
       with:
@@ -35,6 +38,6 @@ jobs:
         push: true
         tags: lincolntx/bucstore.auth:latest
 
-    - name: Image digest
+    - 
+      name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
-        run: echo ${{ steps.docker_build.outputs.digest }}
