--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,43 +1,29 @@
-name: CI to Docker Hub
+
+name: Docker Image CI
+
+
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  
+
 jobs:
 
   build:
+
     runs-on: ubuntu-latest
-  
-  steps:
-    - 
-      name: Check Out Repo 
-      uses: actions/checkout@v2
 
-    - 
-      name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-    - 
-      name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-
-    - 
-      name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ./
-        file: ../Dockerfile
-        push: true
-        tags: lincolntx/bucstore.auth:latest
-
-    - 
-      name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build the Docker image
+      run: |
+        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        docker login -u ${DOCKERHUBUSER} -p ${DOCKERHUBPASS}
+        git tag latest
+        git push origin --tags
+        docker push buckstore.auth:latest
+      env: 
+        DOCKERHUBUSER: ${{secrets.DOCKER_HUB_USERNAME}}
+        DOCKERHUBPASS: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
