--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,11 +19,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        docker build . --file Dockerfile --tag my-image-name:$latest
         docker login -u ${DOCKERHUBUSER} -p ${DOCKERHUBPASS}
         git tag latest
         git push origin --tags
         docker push buckstore.auth:latest
       env: 
-        DOCKERHUBUSER: ${{secrets.DOCKER_HUB_USERNAME}}
+        DOCKERHUBUSER: ${{secrets.DOCKER_HUB_USER_NAME}}
         DOCKERHUBPASS: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
