--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker build . --file Dockerfile --tag buckstore.auth:latest
         docker login -u ${DOCKERHUBUSER} -p ${DOCKERHUBPASS}
-        docker push buckstore.auth:latest
+        docker push lincolntx/buckstore.auth:latest
       env: 
         DOCKERHUBUSER: ${{secrets.DOCKER_HUB_USER_NAME}}
         DOCKERHUBPASS: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
