--- a/src/buckstore.auth.service.application/buckstore.auth.service.application.csproj
+++ b/src/buckstore.auth.service.application/buckstore.auth.service.application.csproj
@@ -9,6 +9,8 @@
         <PackageReference Include="FluentValidation" Version="8.6.2" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
         <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
+        <PackageReference Include="Dapper" Version="2.0.78" />
+        <PackageReference Include="Npgsql" Version="5.0.3" />
     </ItemGroup>
     
     <ItemGroup>
