--- a/src/buckstore.auth.service.api.v1/appsettings.json
+++ b/src/buckstore.auth.service.api.v1/appsettings.json
@@ -25,5 +25,10 @@
     "UserInfoUrl": "https://graph.facebook.com/me?fields=first_name,last_name,email,hometown&access_token={0}",
     "AppId": "214622376801916",
     "AppSecret": "5f54f28249daed855240943d9601f88b"
+  },
+  "KafkaConfiguration": {
+    "AuthToOrder": "auth-to-order",
+    "ConnectionString": "localhost:9092",
+    "Group": "buckstore"
   }
 }
